Updated css and created new post endpoint

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -26,7 +26,8 @@
   top: 5;
   /* Position the navbar at the top of the page */
   width: 100%;
-  /* Full width */ }
+  /* Full width */
+  z-index: 1; }
 
 a, a:active, a:hover, a:visited {
   color: #FFFFFF;
