--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -26,6 +26,7 @@
     position: fixed; /* Set the navbar to fixed position */
     top: 5; /* Position the navbar at the top of the page */
     width: 100%; /* Full width */
+    z-index: 1;
 }
 
 $a-tags: 'a, a:active, a:hover, a:visited';
