--- a/src/components/Landing/Landing.scss
+++ b/src/components/Landing/Landing.scss
@@ -31,5 +31,65 @@
 
 
 
+  .container {
+    position: relative;
+    width: 50%;
 
+    // display: flex;
+	// flex-direction: row;
+	// flex-wrap: wrap;
+	// justify-content: center;
+	// align-items: baseline;
+	// align-content: stretch;
+  }
+  .image {
+    display: block;
+    width: 100%;
+    height: auto;
+
+    // display: flex;
+	// flex-direction: row;
+	// flex-wrap: wrap;
+	// justify-content: center;
+	// align-items: baseline;
+	// align-content: stretch;
+  }
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #000000;
+
+    display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: baseline;
+	align-content: stretch;
+  }
+  .container:hover .overlay {
+    opacity: .6;
+  }
+  .text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+
+    // display: flex;
+	// flex-direction: row;
+	// flex-wrap: wrap;
+	// justify-content: center;
+	// align-items: baseline;
+	// align-content: stretch;
+  }
 
