Hero image, parallax, added contect to components

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,2 +1,10 @@
 .cart-image-style {
   width: 300px; }
+
+.item-display {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: baseline;
+  align-content: stretch; }
