--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -1,3 +1,13 @@
 .cart-image-style {
     width: 300px;
+    // position: absolute;
+    // clip: inherit;
+}
+.item-display {
+    display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: baseline;
+	align-content: stretch;
 }
