--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,15 +1,22 @@
 
+
+
+
+
+
+
+
 .announcement-bar {
     text-align: center;
     background-color: #000000;
-    color: white;
+    color: #FFFFFF;
 }
 .announcement-text {
     padding: 0px;
     margin: 0px;
 }
 .nav-link-bar {
-    background-color: gray;
+    background-color: #DEDEDE;
     color: white;
     padding: 5px;
     display: flex;
@@ -21,12 +28,12 @@
 }
 
 .nav-link-bar {
-    overflow: hidden;
-    background-color: #333;
-    position: fixed; /* Set the navbar to fixed position */
-    top: 5; /* Position the navbar at the top of the page */
-    width: 100%; /* Full width */
-    z-index: 1;
+    // overflow: hidden;
+    // background-color: #333;
+    // position: fixed; /* Set the navbar to fixed position */
+    // top: 5; /* Position the navbar at the top of the page */
+    // width: 100%; /* Full width */
+    // z-index: 1;
 }
 
 $a-tags: 'a, a:active, a:hover, a:visited';
@@ -39,10 +46,17 @@ $a-tags-hover: 'a:active, a:hover';
 #{$a-tags-hover} {
   color: #000000;
 }
-
-.icon-links {
-    background-color: rgba(0, 0, 0, 0.24);
+.cart-icon {
+    width: 35px;
 }
-.icon {
-    width: 50px;
+.search-icon {
+    width: 30px;
+}
+.user-icon {
+    width: 30px;
+}
+.icon-position {
+    position: absolute;
+    top: 60px;
+    right: 20px;
 }
