--- a/src/components/Landing/Landing.scss
+++ b/src/components/Landing/Landing.scss
@@ -1,60 +1,55 @@
-.product-image-style {
-    width: 300px;
-}
 
 .hero-props {
-    font-family: 'Satisfy', cursive;
-    font-size: 40px;
-    color: rgba(228, 157, 50, 0.57);
+    font-family: 'The Girl Next Door', cursive;
+    font-size: 60px;
+    color: rgb(225, 140, 65);
     padding: 0px;
     margin: 0px;
 }
 .hero-image {
-    text-align: center;
-    height: 100vh;
+    height: 91.5vh;
+}
+.bg { 
+    /* The image used */
+    background-image: url("https://images.unsplash.com/photo-1497214068716-571605b05ca8?dpr=1&auto=format&fit=crop&w=1199&h=799&q=80&cs=tinysrgb&crop=");
+    height: 100%; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .hero-text {
     text-align: center;
     padding: 0px;
     margin: 0px;
-}
-.product-allign {
-    text-align: center;
-    display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: baseline;
-	align-content: stretch;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-
-
-
-  .container {
-    position: relative;
-    width: 50%;
-
-    // display: flex;
-	// flex-direction: row;
-	// flex-wrap: wrap;
-	// justify-content: center;
-	// align-items: baseline;
-	// align-content: stretch;
-  }
-  .image {
-    display: block;
+.product-image-style {
+    width: 300px;
+}
+.image {
+    // display: block;
     width: 100%;
     height: auto;
-
-    // display: flex;
-	// flex-direction: row;
-	// flex-wrap: wrap;
-	// justify-content: center;
-	// align-items: baseline;
-	// align-content: stretch;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: baseline;
+    align-content: stretch;
   }
-  .overlay {
+.product-allign {
+ text-align: center;
+}
+.container {
+    position: relative;
+    width: 50%;
+  }
+.overlay {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -65,18 +60,11 @@
     opacity: 0;
     transition: .5s ease;
     background-color: #000000;
-
-    display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: baseline;
-	align-content: stretch;
   }
-  .container:hover .overlay {
+.container:hover .overlay {
     opacity: .6;
   }
-  .text {
+.text {
     color: white;
     font-size: 20px;
     position: absolute;
@@ -84,12 +72,5 @@
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-
-    // display: flex;
-	// flex-direction: row;
-	// flex-wrap: wrap;
-	// justify-content: center;
-	// align-items: baseline;
-	// align-content: stretch;
   }
 
