--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,5 +1,5 @@
 .cart-image-style {
-  width: 300px; }
+  width: 100px; }
 
 .item-display {
   display: flex;
@@ -8,3 +8,16 @@
   justify-content: center;
   align-items: baseline;
   align-content: stretch; }
+
+input[type=text] {
+  width: 20px;
+  padding: 10px 10px;
+  margin: 10px 0;
+  box-sizing: border-box;
+  border: 3px solid #ccc;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none; }
+
+input[type=text]:focus {
+  border: 3px solid #555; }
