--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -1,12 +1,9 @@
 .hero-props {
-  font-family: 'The Girl Next Door', cursive;
+  font-family: 'Megrim', cursive;
   font-size: 60px;
-  color: #e18c41;
+  color: rgba(63, 46, 34, 0.56);
   padding: 0px;
   margin: 0px; }
-
-.hero-image {
-  height: 91.5vh; }
 
 .bg {
   /* The image used */
@@ -18,33 +15,33 @@
   background-size: cover; }
 
 .hero-text {
+  position: absolute;
   text-align: center;
   padding: 0px;
   margin: 0px;
-  position: absolute;
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%); }
+
+.hero-image {
+  height: 92vh; }
+
+.container {
+  position: relative;
+  display: inline-block;
+  width: 400px; }
+
+.photo-position {
+  display: inline-block;
+  background-color: red; }
 
 .product-image-style {
   width: 300px; }
 
 .image {
+  display: inline-block;
   width: 100%;
-  height: auto;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: baseline;
-  align-content: stretch; }
-
-.product-allign {
-  text-align: center; }
-
-.container {
-  position: relative;
-  width: 50%; }
+  height: auto; }
 
 .overlay {
   position: absolute;
@@ -56,16 +53,21 @@
   width: 100%;
   opacity: 0;
   transition: .5s ease;
-  background-color: #000000; }
-
-.container:hover .overlay {
-  opacity: .6; }
+  background-color: #000000;
+  font-family: 'Megrim', cursive; }
 
 .text {
+  position: absolute;
+  display: inline-block;
   color: white;
   font-size: 20px;
-  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%); }
+
+.product-allign {
+  text-align: center; }
+
+.container:hover .overlay {
+  opacity: .6; }
