Added logo to every component

--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -1,7 +1,7 @@
 .hero-props {
   font-family: 'Megrim', cursive;
   font-size: 60px;
-  color: rgba(63, 46, 34, 0.56);
+  color: black;
   padding: 0px;
   margin: 0px; }
 
