--- a/src/components/Landing/Landing.scss
+++ b/src/components/Landing/Landing.scss
@@ -2,7 +2,7 @@
 .hero-props {
     font-family: 'Megrim', cursive;    
     font-size: 60px;
-    color: rgba(63, 46, 34, 0.56);
+    color: rgb(0, 0, 0);
     padding: 0px;
     margin: 0px;
 }
