--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -21,3 +21,10 @@ input[type=text] {
 
 input[type=text]:focus {
   border: 3px solid #555; }
+
+.logo-font {
+  padding: 0px;
+  margin: 0px;
+  font-family: 'Megrim', cursive;
+  font-size: 60px;
+  width: 200px; }
