--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,14 +1,19 @@
 .announcement-bar {
   text-align: center;
-  background-color: #000000;
-  color: #FFFFFF; }
+  background-color: #FFFFFF;
+  color: #000000; }
 
 .announcement-text {
   padding: 0px;
   margin: 0px; }
 
+.nav-bar {
+  background-color: #FAB68E;
+  background: linear-gradient(#7D7D7D, #FCFCFC);
+  width: 100%;
+  height: 30px; }
+
 .nav-link-bar {
-  background-color: #DEDEDE;
   color: white;
   padding: 5px;
   display: flex;
@@ -30,15 +35,22 @@ a {
   width: 200px; }
 
 .cart-icon {
-  width: 35px; }
+  width: 35px;
+  margin: 10px; }
 
 .search-icon {
-  width: 30px; }
+  width: 30px;
+  margin: 10px; }
 
 .user-icon {
-  width: 30px; }
+  width: 30px;
+  margin: 10px; }
 
 .icon-position {
   position: absolute;
-  top: 60px;
+  top: 50px;
   right: 20px; }
+
+@media (max-width: 750px) {
+  .nav-link-bar {
+    display: none; } }
