--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,24 +1,24 @@
 
-
-
-
-
-
-
-
 .announcement-bar {
     text-align: center;
-    background-color: #000000;
-    color: #FFFFFF;
+    background-color: #FFFFFF;
+    color: #000000;
 }
 .announcement-text {
     padding: 0px;
     margin: 0px;
 }
+.nav-bar {
+    background-color: #FAB68E;
+    background: linear-gradient(#7D7D7D, #FCFCFC);
+    width: 100%;
+    height: 30px;
+    // position: fixed;
+}
 .nav-link-bar {
-    background-color: #DEDEDE;
     color: white;
     padding: 5px;
+    // position: fixed;
     display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
@@ -26,26 +26,6 @@
 	align-items: center;
 	align-content: stretch;
 }
-
-.nav-link-bar {
-    // overflow: hidden;
-    // background-color: #333;
-    // position: fixed; /* Set the navbar to fixed position */
-    // top: 5; /* Position the navbar at the top of the page */
-    // width: 100%; /* Full width */
-    // z-index: 1;
-}
-
-// $a-tags: 'a, a:active, a:hover, a:visited';
-// $a-tags-hover: 'a:active, a:hover';
- 
-// #{$a-tags} {
-//   color: #FFFFFF;
-//   text-decoration: none;
-// }
-// #{$a-tags-hover} {
-//   color: #000000;
-// }
 a {
     color: #020202;
     text-decoration: none;
@@ -59,18 +39,28 @@ a {
 }
 
 
-
 .cart-icon {
     width: 35px;
+    margin: 10px;
 }
 .search-icon {
     width: 30px;
+    margin: 10px;
 }
 .user-icon {
     width: 30px;
+    margin: 10px;
 }
 .icon-position {
     position: absolute;
-    top: 60px;
+    top: 50px;
     right: 20px;
+}
+
+
+
+@media (max-width: 750px) {
+    .nav-link-bar {
+        display: none;
+    }
 }
