--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,11 +3,12 @@
 
 .footer {
     text-align: center;
+    padding-top: 40px;
     background: linear-gradient(#DEDEDE, #FFFFFF);
     height: 250px;
     list-style-type: none;
     bottom: 0;
-    width: 100%;
+    width: 100vw;
 }
 .social-icons {
    background-color: black;
