--- a/src/components/Landing/Landing.scss
+++ b/src/components/Landing/Landing.scss
@@ -2,7 +2,7 @@
 .hero-props {
     font-family: 'Megrim', cursive;    
     font-size: 60px;
-    color: rgb(186, 88, 27);
+    color: #000000;
     padding: 0px;
     margin: 0px;
 }
