--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -1,7 +1,7 @@
 .hero-props {
   font-family: 'Megrim', cursive;
   font-size: 60px;
-  color: #ba581b;
+  color: #000000;
   padding: 0px;
   margin: 0px; }
 
