--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -1,5 +1,12 @@
+.outer-div {
+  margin: 40px; }
+
+.div-align {
+  display: flex; }
+
 .product-detail-title {
   padding: 20px;
+  padding-left: 50px;
   margin: 0px; }
 
 hr {
@@ -8,10 +15,10 @@ hr {
 
 .detail-image-style {
   width: 400px;
-  margin: 50px; }
+  margin: 50px;
+  margin-top: 30px; }
 
 .details-description {
-  border: 1px solid black;
   width: 500px;
   margin: 0px;
   padding: 30px; }
