--- a/src/components/Dresses/Dresses.css
+++ b/src/components/Dresses/Dresses.css
@@ -13,13 +13,15 @@
   width: 100%;
   opacity: 0;
   transition: .5s ease;
-  background-color: #000000;
+  background-color: #FFFFFF;
   font-family: 'Megrim', cursive; }
 
 .text {
+  text-align: center;
+  font-weight: bold;
   position: absolute;
   display: inline-block;
-  color: white;
+  color: #000000;
   font-size: 20px;
   top: 50%;
   left: 50%;
@@ -37,7 +39,7 @@
 
 .product-flex {
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
