--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,3 +1,8 @@
+.sticky-nav {
+  position: sticky;
+  top: 0px;
+  z-index: 1; }
+
 .announcement-bar {
   text-align: center;
   background-color: #FFFFFF;
@@ -8,8 +13,7 @@
   margin: 0px; }
 
 .nav-bar {
-  background-color: #FAB68E;
-  background: linear-gradient(#7D7D7D, #FCFCFC);
+  background-color: #FFFFFF;
   width: 100%;
   height: 30px; }
 
@@ -28,7 +32,8 @@ a {
   text-decoration: none; }
 
 .logo-font {
-  padding: 20px;
+  padding-top: 45px;
+  padding-left: 80px;
   margin: 0px;
   font-family: 'Megrim', cursive;
   font-size: 60px;
@@ -50,7 +55,3 @@ a {
   position: absolute;
   top: 50px;
   right: 20px; }
-
-@media (max-width: 750px) {
-  .nav-link-bar {
-    display: none; } }
