--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,4 +1,8 @@
-
+.sticky-nav {
+    position: sticky;
+    top: 0px;
+    z-index: 1;
+}
 .announcement-bar {
     text-align: center;
     background-color: #FFFFFF;
@@ -9,36 +13,33 @@
     margin: 0px;
 }
 .nav-bar {
-    background-color: #FAB68E;
-    background: linear-gradient(#7D7D7D, #FCFCFC);
+    background-color: #FFFFFF;
+    // background: linear-gradient(#7D7D7D, #FCFCFC);
     width: 100%;
     height: 30px;
-    // position: fixed;
 }
 .nav-link-bar {
     color: white;
     padding: 5px;
-    // position: fixed;
     display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
 	justify-content: space-around;
 	align-items: center;
-	align-content: stretch;
+    align-content: stretch;
 }
 a {
     color: #431400;
     text-decoration: none;
 }
 .logo-font {
-    padding: 20px;
+    padding-top: 45px;
+    padding-left: 80px;
     margin: 0px;
     font-family: 'Megrim', cursive;
     font-size: 60px;
     width: 500px;
 }
-
-
 .cart-icon {
     width: 35px;
     margin: 10px;
@@ -55,12 +56,4 @@ a {
     position: absolute;
     top: 50px;
     right: 20px;
-}
-
-
-
-@media (max-width: 750px) {
-    .nav-link-bar {
-        display: none;
-    }
 }
