--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -13,10 +13,11 @@
     margin: 0px;
 }
 .nav-bar {
-    background-color: #FFFFFF;
+    background-color: rgb(228, 220, 213);
     // background: linear-gradient(#7D7D7D, #FCFCFC);
     width: 100%;
     height: 30px;
+    // box-shadow: 0px 5px 5px #c1c1c1;
 }
 .nav-link-bar {
     color: white;
