Fix Cart component scss/product alingment. change navbar color. added new font to every component.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,1 +1,4 @@
-$font-stack: 'Marvel', sans-serif;;
+$font-stack: 'Marvel', sans-serif;
+$light-tan: rgb(228, 220, 213);
+$white: white;
+$black: black;
