--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -13,7 +13,7 @@
     margin: 0px;
 }
 .nav-bar {
-    background-color: rgb(228, 220, 213);
+    background-color: $light-tan;
     // background: linear-gradient(#7D7D7D, #FCFCFC);
     width: 100%;
     height: 30px;
@@ -42,15 +42,15 @@ a {
     width: 500px;
 }
 .cart-icon {
-    width: 35px;
+    width: 20px;
     margin: 10px;
 }
 .search-icon {
-    width: 30px;
+    width: 19px;
     margin: 10px;
 }
 .user-icon {
-    width: 30px;
+    width: 19px;
     margin: 10px;
 }
 .icon-position {
