--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -49,6 +49,24 @@ input[type=text]:focus {
 input {
   width: 30px; }
 
+.total {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column; }
+
+.cart-display {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row; }
+  .cart-display div {
+    padding: 10px 10px;
+    width: 130px;
+    height: auto; }
+  .cart-display h2 {
+    margin-bottom: 5px; }
+
 .outer-div {
   margin: 40px; }
 
@@ -263,15 +281,15 @@ a {
   width: 500px; }
 
 .cart-icon {
-  width: 35px;
+  width: 20px;
   margin: 10px; }
 
 .search-icon {
-  width: 30px;
+  width: 19px;
   margin: 10px; }
 
 .user-icon {
-  width: 30px;
+  width: 19px;
   margin: 10px; }
 
 .icon-position {
