--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -297,6 +297,11 @@ a {
   top: 50px;
   right: 20px; }
 
+.badge {
+  position: absolute;
+  top: 12px;
+  right: -10px; }
+
 .container {
   position: relative;
   display: inline-block;
