--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
     text-align: center;
     padding-top: 40px;
-    background: linear-gradient(#DEDEDE, #FFFFFF);
+    background: linear-gradient(rgb(225, 215, 206), #FFFFFF);
     height: 250px;
     list-style-type: none;
     bottom: 0;
